--- a/app/views/areas/show.html.erb
+++ b/app/views/areas/show.html.erb
@@ -14,6 +14,14 @@
   <p>Description: <%= listing.description %></p>
   <p>Address: <%= listing.address %></p>
   <p>Price: <%= listing.price.amount %></p>
+  <% if listing.prices.count > 1 %>
+    <p>Previous prices:
+    <ol>
+    <% listing.prices.previous.each do |price| %>
+      <li><%= price.amount %>
+    <% end %>
+    </ol>
+  <% end %>
 <% end %>
 
 
